alignment fix

--- a/components/navigation/arrowLink.module.css
+++ b/components/navigation/arrowLink.module.css
@@ -35,7 +35,7 @@
 }
 
 .Text {
-  @apply grid mr-1 text-[#AFA8BA] font-medium justify-items-center !important;
+  @apply grid text-[#AFA8BA] font-medium justify-items-center !important;
 }
 
 .content {
